double scroll issue

--- a/src/Components/InteractiveIframe/iframeCardStyles.scss
+++ b/src/Components/InteractiveIframe/iframeCardStyles.scss
@@ -3,6 +3,6 @@
   border: none;
   width: 100%;
   height:100%;
-  margin-bottom: -4px;
+  margin-bottom: -5px;
 }
 
